force-app/main/default/objects/Order__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Order__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Order</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>