force-app/main/default/objects/Order__c/fields/PrimaryQuote__c.field-meta.xml
<CustomField>
    <fullName>PrimaryQuote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>