force-app/main/default/objects/Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Confirmation</fullName>
                <default>true</default>
                <label>Order Confirmation</label>
            </value>
            <value>
                <fullName>Truck Load Challan</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
                <isActive>false</isActive>
                <label>Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>