force-app/main/default/objects/Order__c/validationRules/Dispatch_Field_Required_On_StageDelivery.validationRule-meta.xml
<ValidationRule>
    <fullName>Dispatch_Field_Required_On_StageDelivery</fullName>
    <active>true</active>
    <errorConditionFormula>And(ISPICKVAL(Status__c,&apos;Delivery&apos;),OR(ISBLANK(  EndDate__c )))</errorConditionFormula>
    <errorMessage>Dispatch End Date is required when Stage is &quot;Delivery&quot;</errorMessage>
</ValidationRule>