force-app/main/default/objects/Order__c/validationRules/Dispatch_Field_Required_On_StageDispatch.validationRule-meta.xml
<ValidationRule>
    <fullName>Dispatch_Field_Required_On_StageDispatch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Dispatch&quot;),
 Invoice_Generated__c = false
)</errorConditionFormula>
    <errorMessage>Please Send an invoice before proceeding with Delivery.</errorMessage>
</ValidationRule>