force-app/main/default/objects/Order__c/validationRules/Invoice_Field_Required_On_StatusDelivery.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Field_Required_On_StatusDelivery</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Delivery&quot;),
 Invoice_Generated__c = false
)</errorConditionFormula>
    <errorMessage>Please Send an invoice before proceeding with Delivery.</errorMessage>
</ValidationRule>