force-app/main/default/objects/Order__c/validationRules/Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
ISPICKVAL( Status__c , &apos;Truck Load Challan&apos;),
IF(TotalAmount__c &gt; (AccountId__r.HMC_Credit_Limit__c +  Advance_Payment__c  ),True,False)
)</errorConditionFormula>
    <errorMessage>Please complete Payment.</errorMessage>
</ValidationRule>