force-app/main/default/objects/Order__c/validationRules/validate_Account_Name_when_rt_is_order.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_Account_Name_when_rt_is_order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     RecordType.Name = &apos;Order&apos;,
    ISBLANK( AccountId__c )
)</errorConditionFormula>
    <errorMessage>Enter Account Name</errorMessage>
</ValidationRule>