force-app/main/default/objects/Order__c/validationRules/validate_contract_number.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_contract_number</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
     RecordType.Name = &apos;Order&apos;,
    ISBLANK( ContractId__c )
)</errorConditionFormula>
    <errorMessage>Enter Contract Name</errorMessage>
</ValidationRule>