force-app/main/default/objects/Order__c/validationRules/validate_order_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_order_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     RecordType.Name = &apos;Order&apos;,
    ISBLANK(EffectiveDate__c)
)</errorConditionFormula>
    <errorDisplayField>ServiceDate__c</errorDisplayField>
    <errorMessage>Enter Stat Date</errorMessage>
</ValidationRule>