force-app/main/default/objects/Order__c/validationRules/validate_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.Name = &apos;Order&apos;,
    ISPICKVAL(Status__c, &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Enter Status</errorMessage>
</ValidationRule>